Really disable executable  signing

--- a/OpenCannibal/OpenCannibal.vbproj
+++ b/OpenCannibal/OpenCannibal.vbproj
@@ -95,7 +95,7 @@
     <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>OpenCannibal_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
